# Jeu-de-Morpion

./: .gitignore  Archi_morpion.drawio  CMakeLists.txt  README.md
etape1/: Doxyfile  board.c  board.c.save  board_view_text.c  game.c  player_manager_mock.c  player_manager_scanf.c
etape1/html/: board_8c__incl.map  board_8h__dep__incl.map  board_8h__incl.map  board__view_8h__dep__incl.map  board__view_8h__incl.map  board__view__text_8c__incl.map  game_8c__incl.map  game_8c_a182e35027dfd61633b04ace81efa51dc_icgraph.map  game_8c_a2886c1ccce89458ac3e60950e3a6feaa_icgraph.map  game_8h__dep__incl.map  game_8h_aef48d39f28b9c7fcb8d8f37a5482ea53_icgraph.map  main_8c__incl.map  main_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  player__manager_8h__dep__incl.map  player__manager__mock_8c__incl.map  tictactoe__errors_8c__incl.map  tictactoe__errors_8h__dep__incl.map
etape2/: player_manager_scanf.c
etape3/: board_view_sdl.c  player_manager_sdl.c
test_tictactoe/: board.c
